--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
             <div class="mn-logo-img-div"><a href="/"><img src="/images/MN logo.png" alt="mn-logo"></a></div>
             <div class="header-text">
                 <h2 class="header-link-text"><a href="/">Home</a></h2>
-                <h2 class="header-link-text"><a href="/about-me">About me</a></h2>
+                <h2 class="header-link-text"><a href="/about-me">Over mij</a></h2>
                 <h2 class="header-link-text"><a href="/contact">Contact</a></h2>
             </div>
         </div>
@@ -27,8 +27,8 @@
     </div>
 
     <div class="info-text-flex-container">
-        <h2>Hello,</h2>
-        <p>My name is Michiel Nijenhuis and I'm a hobby developer. I have a lot of interest in code and programming.</p>
+        <h2>Hallo,</h2>
+        <p>Mijn naam is Michiel Nijenhuis en ik ben een hobby developer. Ik heb veel interesse in code en programmeren.</p>
     </div>
 
     <div class="showing-img-flex-container">
@@ -40,6 +40,12 @@
         <div class="kloezeman-logo-container img-container">
             <div><img class="showing-img" src="/images/N.Kloezeman logo.png" alt="Niels Kloezeman logo"></div>
             <p>This is a logo I created for someone!</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="contact-text-container">
+            <p>Wil je contact opnemen voor een bepaalde reden? Dat kan!</p>
         </div>
     </div>
 </body>
