Make some text dutch

--- a/views/index.html
+++ b/views/index.html
@@ -34,18 +34,19 @@
     <div class="showing-img-flex-container">
         <div class="sketchup-table-container img-container">
             <div><img class="showing-img" src="/images/Monitor-stand-foto.JPG" alt="Monitor stand photo"></div>
-            <p>Sometimes I make 3D models too.</p>
+            <p>Soms maak ik ook wel 3D modellen.</p>
         </div>
 
         <div class="kloezeman-logo-container img-container">
             <div><img class="showing-img" src="/images/N.Kloezeman logo.png" alt="Niels Kloezeman logo"></div>
-            <p>This is a logo I created for someone!</p>
+            <p>Dit logo heb ik gemaakt voor iemand!</p>
         </div>
     </div>
 
     <div class="footer">
         <div class="contact-text-container">
             <p>Wil je contact opnemen voor een bepaalde reden? Dat kan!</p>
+            <a href="/contact"><button>Neem contact op</button></a>
         </div>
     </div>
 </body>
