--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -62,6 +62,7 @@ body {
     cursor: pointer;
 }
 
+
 .mn-big-logo-flex-container {
     width: 80%;
     height: 1000px;
@@ -177,6 +178,43 @@ body {
     background-image: linear-gradient(#1A1A1A, #6B6B6B);
     width: 100%;
     height: 300px;
-    margin-top: 200px;
+    margin-top: 200px;   
+}
+
+.contact-text-container {
+    margin: 0 auto;
+    width: 90%;
+    height: 100%;
+    color: white;
+    font-family: 'SF Pro Display', sans-serif;
+    font-size: 30pt;
+    text-align: center;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20%;
+}
+
+.contact-text-container > p {
+    font-weight: 550;
+    width: 720px;
+    min-width: 100px;
+}
+
+.contact-text-container > a > button {
+    font-size: 20pt;
+    border: none;
+    width: 500px;
+    height: 75px;
+    border-radius: 20px;
+    color: white;
+    background-color: rgb(244 31 0);
+    cursor: pointer;
+}
+
+.contact-text-container > a > button:hover {
+    background-color: rgb(222, 30, 0);
 }
 
